updated for new version

--- a/doc/extraIntro.tex
+++ b/doc/extraIntro.tex
@@ -1,5 +1,5 @@
 %
-%$Id: extraIntro.tex,v 1.2 2005-07-06 14:11:27 kbk Exp $
+%$Id: extraIntro.tex,v 1.3 2005-08-11 13:58:17 lars Exp $
 %
 
 \section{Extra features \label{sec:extra}}
@@ -7,12 +7,8 @@
 Here, some extra features are stored which are up to now
 
 \begin{itemize}
-\item the {\tt sediment} module and
 \item the {\tt seagrass} module.
 \end{itemize}
 
-A test scenario to become acquainted with the {\tt sediment} module
-is discussed in \sect{rouse}, where the so-called Rouse-profile
-is reproduced. The {\tt seagrass} scenario in \sect{seagrass} 
-investigates the \cite{VerduinBackhaus2000} seagrass-current
-simulations. 
+The {\tt seagrass} scenario in \sect{sec:seagrass} investigates the
+\cite{VerduinBackhaus2000} seagrass-current simulations.
