Update of realistic test cases

--- a/doc/meanflowIntro.tex
+++ b/doc/meanflowIntro.tex
@@ -1,5 +1,5 @@
 %
-%$Id: meanflowIntro.tex,v 1.3 2005-08-11 13:57:07 lars Exp $
+%$Id: meanflowIntro.tex,v 1.4 2005-08-16 14:42:17 hb Exp $
 %
 
 \section{The mean flow model \label{sec:meanflowIntro}}
@@ -40,7 +40,7 @@ K. Further conventions are introduced in the turbulence chapter
 \sect{sec:turbulenceIntro}. All operations on these meanflow variables
 are executed and coordinated in the {\tt meanflow} module.
 
-\subsubsection{Physics}
+\subsubsection{Physics}\label{sec:meanflowIntroPhysics}
 Due to the one-dimensional character of GOTM, the state-variables
 listed above are assumed to be horizontally homogeneous, depending
 only on the vertical $z$-coordinate. As a consequence, all 
