--- a/doc/cases.tex
+++ b/doc/cases.tex
@@ -1,5 +1,5 @@
 %
-%$Id: cases.tex,v 1.3 2005-07-20 12:38:01 lars Exp $
+%$Id: cases.tex,v 1.4 2005-08-16 14:42:17 hb Exp $
 %
 
 \section{GOTM scenarios \label{sec:cases}}
@@ -23,13 +23,11 @@ Section & Title & Scenario name \\ \hline\hline
 \ref{estuary} & Estarine dynamics & {\tt estuary} \\ \hline 
 \ref{flex} &Fladenground Experiment  & {\tt flex} \\ \hline 
 \ref{nns_annual} & Annual North Sea simulation & {\tt nns\_annual} \\ \hline 
-\ref{provess_nns} & PROVESS North Sea simulation & {\tt provess\_nns} \\ \hline 
-\ref{irishsea} & Irish Sea & {\tt irishsea} \\ \hline 
+\ref{nns_seasonal} & Seasonal North Sea simulation & {\tt nns\_seasonal} \\ \hline 
 \ref{liverpool_bay} &Liverpool Bay  & {\tt liverpool\_bay} \\ \hline 
-\ref{knebelvig} & Knebel Vig & {\tt knebelvig} \\ \hline 
-\ref{ooster} &Eastern Scheldt  & {\tt ooster} \\ \hline 
+\ref{gotland_deep} & Gotland Deep in Baltic Sea & {\tt gotland\_deep} \\ \hline 
+\ref{reynolds} & Middelbank in Baltic Sea & {\tt reynolds} \\ \hline 
 \ref{ows_papa} &Ocean Weather Ship Papa & {\tt ows\_papa} \\ \hline 
-\ref{ows_november} & Ocean Weather Ship November & {\tt ows\_november} \\ \hline 
 \ref{lago_maggiore} & Lago Maggiore & {\tt lago\_maggiore} \\ \hline 
 \end{tabular}
 \caption{List of GOTM scenarios described in this section}
@@ -501,7 +499,7 @@ Hydrographie, Hamburg, Germany
 \end{tabular}
 
 
-\subsubsection{PROVESS North Sea simulation}\label{provess_nns}
+\subsubsection{Seasonal North Sea simulation}\label{nns_seasonal}
 
 This Northern North Sea Experiment has been carried out in the framework
 of the PROVESS (PROcesses of VErtical mixing in Shealf Seas) project 
@@ -557,69 +555,6 @@ a triangle of pressure gauges \\
 \end{tabular}
 
 
-\subsubsection{Irish Sea}\label{irishsea}
-
-Here, dissipation rate measurements 
-carried out by
-\cite{Simpsonetal96} in the Western Irish Sea 
-with the FLY shear probe 
-are simulated, see
-also \cite{Burchardetal98}.
-The measurements were made over a 24 hour period in July 1993 at a site with
-water depth of 90 m and position 53$^{\circ}$49'N, 5$^{\circ}$27'W.
-The site has rectilinear tidal currents, and the tidal current amplitude
-at the time of the measurements was 0.45 m s$^{-1}$. During the observational
-period the water column was thermally stratified with near surface
-temperature of 14$^{\circ}$C and temperatures of 10$^{\circ}$C below the
-thermocline, which was situated 75 m above the sea-bed. In addition to
-hourly CTD-profiles and moored current meter measurements, turbulent
-dissipation was measured using a FLY free-fall 
-shear probe. Six profiles
-were made per hour, and these were averaged together to give hourly
-means. Measurements made in the top 10 m of the water column have been
-excluded as the probe may still be accelerating, and the signal may be
-contaminated by the ships wake.
-
-The forcing data for the model is
-provided by a time series of current measurements taken 12~m
-above the bed, from which a sea surface slope is calculated such that the
-model exactly reproduces the observed flow
-(see \cite{Burchard99}). Cross-surface heat
-exchange is calculated from dew point temperature, wind speed, and direct
-solar radiation observed at a nearby meteorological station.
-Cross-surface momentum exchange is calculated from the observed wind
-speed and direction (following \cite{Simpsonetal96}).
-\\ 
-
-{\bf Data files:}
-
-\begin{tabular}{ll}
-{\tt pressure.dat} & time series of current meter measurements 12 m above bed\\
-{\tt tprof.dat} & profiles of measured potential temperature in $^{\circ}$C 
-for initial conditions \\ & and relaxation  \\
-{\tt sprof.dat} & profiles of measured salinity in ppt 
-for initial conditions and relaxation \\
-{\tt epsprof.dat} & profiles of measured dissipation rate in W\,kg$^{-1}$. 
-Until July 7, 1993 \\ & at 13.00 h filled with dummy values. Upper 10 m were 
-not measured and \\ & also filled with dummy values (10$^{-11}$ W/kg)\\ 
-{\tt heatflux.dat} &    surface heat fluxes in W\,m$^{-2}$  \\ &
-              (fluxes calculated with \cite{Kondo75} bulk formulae \\ 
-{\tt momentumflux.dat} &    surface momentum flux 
-              $\tau_x$ and $\tau_y$ in N\,m$^{-2}$ \\ &
-              (fluxes calculated with \cite{Kondo75} bulk formulae \\ 
-\end{tabular}
-\\
-
-The data have been kindly provided by Tom Rippeth, see
-\cite{Simpsonetal96}.
-      
-{\bf Comments:} Using this experimental set-up creates a bottom boundary 
-layer (BBL) thickness significantly shallower than in the simulation in
-the literature (see \cite{Burchardetal99}). This is because here, the 
-BBL has first to develop into the stratified regime from below. 
-In other simulations (\cite{Burchardetal98}), the model has been 
-spun up for some time. 
-          
 \subsubsection{Liverpool Bay}\label{liverpool_bay}
 
 The observations for this scenario
@@ -690,71 +625,112 @@ of the \cite{Kondo75} \\ & bulk formulae \\
 The numerical simulations of this scenario
 has been described in \cite{Simpsonetal2002}.
 
+\subsubsection{Gotland Deep}\label{gotland_deep}
 
-\subsection{Estarine scenarios}
+These simulations are made for the location of
+station 271 Central Eastern
+Gotland Sea of the Baltic Sea at
+$20\,$E and $57.3\,$N with a water depth of about $250\;$m.
+Initial conditions for temperature and salinity are derived from measurements. 
+Meteorological
+forcing was available from the ERA15 reanalysis data set
+(http://wms.ecmwf.int/research/era/Era-15.html). 
+For the penetration of solar radiation into the
+water column, fairly turbid water (Jerlov type IB) is assumed. 
+Salinity concentrations are nudged to observations with a time scale of
+$\tau_R=$ 2 days.
 
-The two estuarine scenarios discussed here have been developed in
-the framework of the 
-European Communities MAST III project PhaSE (MAS3-CT-0053). Both have 
-been published by \cite{Burchardetal2000}.
+For the comparison of simulated temperature and salinity
+and observations  we have used mainly
+data from the COMBINE program. All environmental monitoring within HELCOM
+and the Baltic marine environment is carried out under the COMBINE program.
+The COMBINE program runs under the umbrella of HELCOM.
+HELCOM is the governing body of the {\it Convention on the Protection of the
+Marine Environment of the Baltic Sea Area} - more usually known as the
+Helsinki Commission ({\tt www.helcom.fi}). In a regular schedule data from
+stations in the Baltic Sea are collected. Parts of these data are maintained
+inter alia at the Baltic Sea Research Institute Warnem\"unde
+and can be used for
+scientific work. 
 
-\subsubsection{Knebel Vig}\label{knebelvig}
-
-The data for this scenario have been collected in the framework of the
-European Communities MAST III project PhaSE (MAS3-CT-0053) in
-Knebel Vig, a small embayment in eastern Jutland Denmark.
-The geographical position was 
-10$^{\circ}$27' E, 56$^{\circ}$13' N at a mean water depth of $H=11.65$ m. 
-The simulation period is September 11, 0.00 h to September 13, 13.00 h in 1997.
+Model results and observations are compared for the years 1994-1996.
+For the discretisation, the water column has been
+divided into 100 vertical layers, with a strong zooming towards the surface,
+resulting in a mean near-surface resolution of less than 0.5 m.
+The time step for these simulations is set to $\Delta t=1$ hour.
 \\
 
+{\bf Data files:}
+
 \begin{tabular}{ll}
-{\tt sprof.dat} &  profiles of measured salinity in ppt for initial 
-conditions and relaxation \\
-{\tt tprof.dat} & profiles of measured potential temperature for 
-initial conditions and \\ & relaxation \\    
-{\tt pressure.dat} & time series of current velocity at 1 m above bed, 
-estimated from current \\ & direction and dissipation rate measurements \\
-{\tt extinction.dat} &  extinction coefficients fitted to measurements \\ 
-{\tt zeta.dat} & time series of measured surface elevation \\
-{\tt epsprof.dat} & profiles of measured dissipation rate for validation \\
-{\tt heatflux.dat} & surface heat fluxes calculated by means of the 
-\cite{Kondo75} bulk formulae \\
-{\tt momentumflux.dat} & surface momentum fluxes calculated by means 
-of the \cite{Kondo75} \\ & bulk formulae \\
+{\tt meteo.dat} &  meteorological data extracted from the ERA15 reanalysis 
+                   data set  \\
+{\tt sprof\_271.dat} & deep salinity profiles at station 271\\ 
+{\tt sprof\_271\_all.dat} & all salinity profiles at station 271\\ 
+{\tt sprof\_GB.dat} &  all salinity profiles in Gotland basin, \\ & within
+57$^{\circ}$8.3'N - 57$^{\circ}$28.3'N and
+19$^{\circ}$54.6'E - 20$^{\circ}$14.6'E\\
+{\tt tprof\_271.dat} &  deep temperature profiles at station 271\\
+{\tt tprof\_271\_all.dat} & all temperature profiles at station 271 \\
+{\tt tprof\_GB.dat} &  all temperature profiles in Gotland basin, \\ & within
+57$^{\circ}$8.3'N - 57$^{\circ}$28.3'N and
+19$^{\circ}$54.6'E - 20$^{\circ}$14.6'E\\
 \end{tabular}
 \\
 
-For a discussion of the simulation, see \cite{Burchardetal2000}. 
+The meteorological data have been compiled by Frank Janssen 
+(IOW, Baltic Sea Research Institute Warnem\"unde, Germany), and
+the temperature and salinity profiles have been collected from the IOW
+data bank by Iris Theil (University of Hamburg, Germany).
 
+These data have been used for simulating the Gotland Deep ecosystem dynamics
+for the years 1983-1991, see \cite{Burchardetal05}.
 
-\subsubsection{Eastern Scheldt}\label{ooster}
+\subsubsection{Middelbank}\label{reynolds}
 
-The data for this scenario have been collected in the framework of the
-European Communities MAST III project PhaSE (MAS3-CT-0053) in
-the Eastern Scheldt (Oosterschelde), Zeeland, The Netherlands.    
-The geographical position was 
-3$^{\circ}$54' E, 51$^{\circ}$33' N at a mean water depth of $H=12.1$ m. 
-The simulation period is June 25, 12.00 h to June 28, 12.30 h in 1996.
+Here a campaign (REYNOLDS, funded by the German Federal Ministry for
+Education and Research, chief-scientist Hans Ulrich Lass, IOW)
+in the Eastern Bornholm Basin
+(55$^{\circ}$ 35' N, 16$^{\circ}$ 39' E, mean water depth: 55 m)
+is simulated. The simulation period is
+August 30, 2001 at 17 h to September 9, 2001 at 14 h.
+The water column is characterised by a thermocline at about 25 m depth 
+and a halocline at about 50 m depth. The simulation period 
+is charaterised by storms up to 0.2 N\,m$^{-2}$.
+As forcing, surface stress, heat fluxes and solar radiation
+has been calculated on the basis of meteorological observations
+by using the bulk formulae of \cite{Kondo75}.
+The barotropic pressure gradient has been recalculated 
+from vertically averaged observed velocity profiles, see section
+\ref{sec:meanflowIntroPhysics}.
+As initial conditions, observed temperature, salinity and velocity profiles
+are used. 
+Additionally the vertical velocity at the thermocline has been diagnosed from
+temperature observations and is used for vertical advection,
+see section \ref{sec:meanflowIntroPhysics}.
+The turbulent dissipation rate $\eps$ has been observed during two 
+sub-periods, such that turbulence model results may be compared with 
+observations. 
 \\
 
+{\bf Data files:}
+
 \begin{tabular}{ll}
-{\tt sprof.dat} &  profiles of measured salinity in ppt for initial 
-conditions and relaxation \\
-{\tt tprof.dat} & profiles of measured potential temperature for 
-initial conditions and \\ & relaxation \\    
-{\tt pressure.dat} & time series of current velocity at 1 m above bed, 
-estimated from current \\ & direction and dissipation rate measurements \\
-{\tt zeta.dat} & time series of measured surface elevation \\
-{\tt epsprof.dat} & profiles of measured dissipation rate for validation \\
-{\tt heatflux.dat} & surface heat fluxes calculated by means of the 
-\cite{Kondo75} bulk formulae \\
-{\tt momentumflux.dat} & surface momentum fluxes calculated by means 
-of the \cite{Kondo75} \\ & bulk formulae \\
+{\tt eprof.dat} & profiles of observed dissipation rate in W\,kg$^{-1}$ \\
+{\tt heatflux.dat} & surface heat flux and solar radiation in  W\,m$^{-2}$ \\
+{\tt momentumflux.dat} & surface momentum flux in  N\,m$^{-2}$ \\
+{\tt pressure.dat} & vertically averaged velocity components in m\,s$^{-1}$ \\
+{\tt sprof.dat} & profiles of observed salinity in psu \\
+{\tt sss.dat} & time series of sea surface salinity in psu \\
+{\tt sst.dat} & time series of sea surface temperature in $^{\circ}$C \\
+{\tt tprof.dat} & profiles of observed temperature in $^{\circ}$C \\
+{\tt velprof.dat} & profiles of observed velocity components in m\,s$^{-1}$ \\
+{\tt vertvel.dat} & profiles of diagnosed vertical velocity at thermocline 
+                    depth in m\,s$^{-1}$ \\
 \end{tabular}
 \\
 
-For a discussion of the simulation, see \cite{Burchardetal2000}. 
+So far, these data have not yet been published. 
 
 \subsection{Open ocean scenarios}
 
@@ -763,7 +739,6 @@ test cases from the Northern Pacific Ocean. For an overview, see
 \cite{Martin85}.
 
 \subsubsection{Ocean Weather Ship Papa}\label{ows_papa}
-
 
 This scenario is a classical scenario 
 for the Northern Pacific, for which
@@ -791,6 +766,8 @@ In this scenario, the simulation time is run from
 March 25, 1961 (0.00 h) to March 25, 1962 (0.00 h).
 \\
 
+{\bf Data files:}
+
 \begin{tabular}{ll}
 {\tt sprof.dat} &   salinity profiles in ppt of monthly climatology from 
 Levitus data set. First \\ & profile interpolated to January, 1 \\ 
@@ -807,43 +784,12 @@ This scenario has been discussed in detail by \cite{Burchardetal99}.
 We are grateful to Paul Martin for providing the meteorological data
 and the temperature profiles, see also \cite{Martin85}.
 
-\subsubsection{Ocean Weather Ship November}\label{ows_november}
-
-This Ocean Weather Ship November scenario is treated similarly as the
-Ocean Weather Ship Papa scenario, see section \ref{ows_papa}.
-Here, the geographical position is further south, at 140 $^{\circ}$W
-and 30$^{\circ}$N. 
-The maximum simulation time allowed by
-the included surface forcing file and the temperature profile file
-is February 2 (15.00 h), 1960 - December 31 (18.00 h), 1970.
-In this scenario, the simulation time is run from
-January 1, 1961 (0.00 h) to January 1, 1962 (0.00 h).
-\\
-
-\begin{tabular}{ll}
-{\tt sprof.dat} &   salinity profiles in ppt of monthly climatology from 
-Levitus data set. First \\ & profile interpolated to January, 1 \\ 
-{\tt tprof.dat} & profiles of measured potential temperature for 
-initial conditions and \\ & relaxation \\    
-{\tt heatflux.dat} & surface heat fluxes calculated by means of the 
-\cite{Kondo75} bulk formulae \\
-{\tt momentumflux.dat} & surface momentum fluxes calculated by means 
-of the \cite{Kondo75} \\ & bulk formulae \\
-\end{tabular}
-\\
-
-We are grateful to Paul Martin for providing the meteorological data
-and the temperature profiles, see also \cite{Martin85}.
-
-
-
 \subsection{Lake scenarios}
 
 So far, the Lago Maggiore scenario discussed in section \ref{lago_maggiore}
 is the only lake scenario. 
 
 \subsubsection{Lago Maggiore}\label{lago_maggiore}
-
 
 The measurements for this Lago Maggiore
 scenario were made during three days in winter 1995
@@ -880,6 +826,8 @@ formulae, they were
 calculated from the heat gain of the water column under consideration
 of the solar radiation.
 \\
+
+{\bf Data files:}
 
 \begin{tabular}{ll}
 {\tt salz\_lmd95.dat} &  profiles of measured salinity in ppt for initial 
