--- a/doc/gotm.bib
+++ b/doc/gotm.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm.bib,v 1.2 2005-07-06 14:11:27 kbk Exp $
+%$Id: gotm.bib,v 1.3 2005-08-16 14:42:17 hb Exp $
 %
 
 @String{OMOD = "Ocean Modelling"}
@@ -517,6 +517,20 @@ $k-\epsilon$ two-equation turbulence models",
    year     = {2002},
    note     = {},
 }
+
+@article{Burchardetal05,
+   author   = {Hans Burchard and Karsten Bolding and Wilfried K\"uhn
+               and Andreas Meister and Thomas Neumann and Lars Umlauf},
+   title    = {Description of a flexible and extendable
+               physical-biogeochemical model system for the water column},
+   journal  = JMS,
+   volume   = {},
+   pages    = {},
+   year     = {2005},
+   note     = acc,
+}
+
+
 
 
 @article(Busingeretal71,
