information via www.gotm.net only

--- a/HISTORY
+++ b/HISTORY
@@ -1,77 +1,2 @@
-Many people have been giving important
-impulses to the development of GOTM.
-The first lines of the first PASCAL code have been programmed in late 1992
-by the first
-author of this report as part of a Ph.D. project at the
-Institut f"ur Meereskunde of the Universit"at Hamburg, Germany,
-under the supervision of J"urgen S"undermann and Helmut Baumert.
-This was the
-the basis for a one-dimensional water column model
-for simulating the so-called FLEX'76 data (see Burchard and Baumert
-[1995]),
-a two-dimensional channel model (Burchard and Baumert [1998]) and
-a three-dimensional shallow water model (Burchard [1995]).
-Further substantial advice for these modelling activities came
-also from Eckard Kleine
-(Bundesamt f"ur Seeschiffahrt und Hydrographie, Hamburg, Germany) who
-together with Helmut Baumert had
-a long time experience in turbulence modelling (see e.g. Baumert et al.
-[1989a, 1989b] and Baumert and Radach [1992]).
+Please read information and documentation on www.gotm.net
 
-A strong motivation for extending the model code (which at that stage only
-included the k-epsilon model) came in 1995 from George Mellor (Princeton
-University, New Jersey) who provoked with the statement that he never
-saw a k-epsilon model (in contrast
-to the Mellor-Yamada model) reproducing the Monin-Obukhov stability theory.
-In an effort together with Ole Petersen (International Centre of Computational
-Hydrodynamics, H\o rsholm, Denmark) the equivalence of the k-epsilon and
-the Mellor-Yamada models under certain circumstances and thus the successful
-reproduction of the Monin-Obukhov stability theory could be demonstrated
-(Burchard et al. [1998], Burchard and Petersen [1999]).
-Stability problems occurred when the water column model (now already
-with a switch for choosing either the k-epsilon or the Mellor-Yamada model)
-was transferred to FORTRAN in late 1996. It was Boris Kagan (Shirshov
-Institute of Oceanology, St. Petersburg, Russia) who insisted that
-oscillations in the turbulent macro length scale under very small stable
-stratification are numerical artifacts and therefore unacceptable.
-The solution to that problem was finally to use double instead of
-single precision for the calculations.
-
-In a cooperation with Nadia Pinardi and Sergio Castellari
-(Istituto per lo Studio delle Metodologie Geofisiche Ambientali, Bologna,
-Italy) during 1997 and 1998, the experiences of that FORTRAN code
-were incorporated into a version of the Modular Ocean Model (MOM,
-Geophysical Fluid Dynamics Laboratory, Princeton, New Jersey) for
-calculating the general circulation and convective events in the
-Mediterranean Sea (Castellari et al. [1999]).
-During the same years, the turbulence model was under strong criticism
-from Walter Eifler and Adolf Stips (Joint Research Centre, Ispra, Italy)
-when it was inter-calibrated with in-situ measurements of dissipation
-rate in two different estuaries.
-During this effort both, the model and the measurement strategy were
-significantly improved. However, discrepancies remained and the discussion is
-still going on (Burchard et al. [1999]).
-
-The idea of GOTM, as it is presented here, was born in spring 1998, when
-Karsten Bolding (the second author of this report) joined the development.
-It was a major effort to collect the many different codes
-(each set up for only one test case), written in different programming
-languages, stored on different computers and merge them together into one
-product. In summer 1998, Manuel Ruiz Villarreal (the third author of
-this report) joined us on all levels of GOTM such as
-internal wave parameterizations, algebraic length scales, documentation, test
-cases, graphics, etc.
-
-At this stage, the first version of GOTM was copied to the anonymous-ftp
-server of the Institut f"ur Meereskunde in Hamburg, Germany on May 1, 1999 as
-GOTM1.0.
-
-Later, Pierre-Philippe Mathieu, JRC Ispra, Italy carried out two major
-changes which conssiderably ease the use of GOTM. A general tracer 
-routine (yevol.f) has been created for easy addition of further tracer
-equations such as biological modules. Secondly, a graphical output for the 
-Grid Analysis and Display System (GrADS) was added, which allows for a
-quick analysis of simulation results. The namelists for the scenarios did
-not have to be changed. Therefore this new version was called GOTM1.1 and
-copied to the anonymous-ftp server on July 4, 1999. Such, Pierre-Philippe 
-became GOTM author no. 4. 
